--- a/application/views/auth/info.html
+++ b/application/views/auth/info.html
@@ -1,25 +1,29 @@
 <?php include APPLICATION_PATH."/application/views/public/header.html" ?>
 <div class="container-fluid">
 	<!-- Begin page heading -->
-	<h1 class="page-heading">CMS <small> </small></h1>
+	<h1 class="page-heading">角色 详情<small></small></h1>
 	<!-- End page heading -->
 
 	<!-- Begin breadcrumb -->
 	<ol class="breadcrumb default square rsaquo sm">
 		<li><a href="index.html"><i class="fa fa-home"></i></a></li>
 		<li><a href="#fakelink">管理后台</a></li>
-		<li class="active">首页</li>
+		<li class="active">角色列表</li>
 	</ol>
 	<!-- End breadcrumb -->
 	
 	
 	<div class="row">
-		  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 欢迎登录管理后台
-		  <br>
-		  <br>
-		  <br> 
-		  <br>
-		  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 代码库，账号管理，权限管理
+ 			<a href="/auth/index"><button class="btn btn-success">返回</button></a>
+		 
+			<div class="the-box no-border store-list">
+				  <?php echo $info['title']?>
+				  <?php echo $info['content']?>
+		    </div><!-- /.the-box no-border -->
+	    
+
+	   
+
 
 	</div><!-- /.row -->
 
